# NekoPapa

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GOVERNANCE.md  README.md  README_EN.md  SECURITY.md  build_linux.sh  build_macos.sh  build_win.bat
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture-tech-debt.yml  bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
app/control-desktop/: index.html  package-lock.json  package.json  vite.config.ts
app/control-desktop/scripts/: prepare-stage.mjs
app/control-desktop/src/: App.tsx  main.tsx  styles.css
app/control-desktop/src-tauri/: Cargo.toml  tauri.conf.json
app/control-desktop/src-tauri/capabilities/: default.json
app/control-desktop/src-tauri/icons/: icon.icns
app/control-desktop/src-tauri/src/: lib.rs  main.rs  stage.rs  window_state.rs
app/control-desktop/src/bridge/: stage.ts
app/control-desktop/src/components/: Live2DCompanion.tsx  TopNavigation.tsx  ui.tsx
app/control-desktop/src/pages/: AgentPage.tsx  ConversationPage.tsx  MemoryPage.tsx  SettingsPage.tsx  StagePage.tsx  WorldPage.tsx
app/control-desktop/src/styles/: agent.css  base.css  home.css  responsive.css  settings.css  stage.css  workspace.css
app/live2d-stage/: CMakeLists.txt
app/live2d-stage/src/: main.cpp  stage_options.cpp  stage_options.h  stage_runtime.cpp  stage_runtime.h
app/stage-desktop/: CMakeLists.txt
app/stage-desktop/qml/: CharacterPage.qml  HomePage.qml  SoulPage.qml  main.qml
app/stage-desktop/qml/core/: NNAAppShell.qml  NNAGlassPanel.qml  Theme.qml
app/stage-desktop/qml/features/home/: HomeView.qml
app/stage-desktop/qml/features/home/components/: HomeAvatarArea.qml  HomeInputBar.qml
app/stage-desktop/qml/features/mine/: NNAMineView.qml
app/stage-desktop/src/: app_controller.cpp  app_controller.h  main.cpp  nna_avatar_canvas.cpp  nna_avatar_canvas.h  nna_macos_dock.cpp  nna_macos_dock.h  nna_macos_dock.mm  nna_model_manager.cpp  nna_model_manager.h  nna_window_chrome.cpp  nna_window_chrome.h  nna_window_chrome.mm
assets/live2d/: README.md
cmake/: FindLive2D.cmake
doc/: ISSUES.md  OpenNeko Engine — 世界观与猫娘人设集.md  OpenNeko Engine — 数字生命愿景书.md  OpenNeko Engine 完整项目结构.md  OpenNeko Engine 桌面客户端UI架构设计.md  README.md  README_EN.md  🐾 Nekonano-Aether (NNA) 协作指南：Issues 与 Pull Request.md  🐾 Nekonano-Aether (NNA) 团队全流程 Git 实战手册.md  🐾 OpenNeko Engine 多平台开发环境配置指南.md  📜 Nekonano-Aether (NNA) 开发规范手册.md
doc/architecture/: README.md  build-and-test-gates.md  desktop-runtime-boundaries.md  qt-to-tauri-migration.md  repository-layout.md
doc/architecture/adr/: 0000-template.md  README.md
doc/contributing/: development-environment.md  git-workflow.md  issue-and-pull-request-guide.md
doc/engineering/: standards.md
doc/legacy/: README.md  openneko-digital-life-vision.md  openneko-world-and-characters.md
doc/product/: README.md  desktop-ui-architecture.md  prototype-baseline.md
engine/: CMakeLists.txt
engine/include/nna/: export.h
engine/include/nna/graphics/live2d/: live2d_allocator.h  live2d_model.h  live2d_pal.h  live2d_renderer.h  live2d_texture.h
engine/src/graphics/live2d/: live2d_model.cpp  live2d_pal.cpp  live2d_renderer.cpp  live2d_texture.cpp
protocol/stage/v1/: README.md  command.schema.json  event.schema.json  message.schema.json
protocol/stage/v1/examples/: error.jsonl  health.jsonl  session.jsonl
scripts/: check-new-repository-junk.sh
